Now ready to commit

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   
  
   
-  <div >
+  <div id="slide" >
     <div class="row">
       <div class="col-md-12">
    <center><p id="p1">MEETING ALL YOUR PROCUREMENT NEEDS</p></center>
